force-app/main/default/objects/Test_Suite__c/Test_Suite__c.object-meta.xml
<CustomObject>
    <description>A grouping of related Test Scripts that share a target org, credentials, and browser service configuration. Suites can be run as a batch by the Agentforce QA agent.</description>
    <label>Test Suite</label>
    <nameField>
        <label>Test Suite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Suites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>