force-app/main/default/objects/Test_Suite__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this suite and its scripts are eligible to be executed by the Agentforce QA agent.</description>
    <inlineHelpText>Uncheck to disable this entire suite without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>