force-app/main/default/objects/Test_Suite__c/fields/Default_Run_As__c.field-meta.xml
<CustomField>
    <fullName>Default_Run_As__c</fullName>
    <description>Default user the browser agent will impersonate when executing scripts in this suite. Individual scripts can override this with their own Run Script As field.</description>
    <inlineHelpText>The user the AI agent will log in as for all scripts in this suite, unless a script specifies its own Run Script As user.</inlineHelpText>
    <label>Default Run As</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Test Suites (Default Run As)</relationshipLabel>
    <relationshipName>Test_Suites_Default_Run_As</relationshipName>
    <type>Lookup</type>
</CustomField>