force-app/main/default/objects/Test_Suite__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the business area or release this suite covers.</description>
    <inlineHelpText>Describe what this suite tests (e.g. Sprint 24.3 regression, Opportunity-to-Close flow).</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>