force-app/main/default/objects/Test_Suite__c/fields/Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date__c</fullName>
    <description>Date and time of the most recent suite execution.</description>
    <inlineHelpText>Automatically updated after each suite run.</inlineHelpText>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>