force-app/main/default/objects/Test_Suite__c/fields/Last_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Status__c</fullName>
    <description>Outcome of the most recent execution of this suite. Automatically updated when a suite run completes.</description>
    <inlineHelpText>Automatically updated after each suite run.</inlineHelpText>
    <label>Last Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Run</fullName><default>true</default><label>Not Run</label></value>
            <value><fullName>Passed</fullName><default>false</default><label>Passed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>