force-app/main/default/objects/Test_Suite__c/fields/Named_Credential_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_API_Name__c</fullName>
    <description>API name of the Named Credential pointing to the browser automation microservice used by all scripts in this suite.</description>
    <inlineHelpText>API name of the Named Credential for the browser agent service (e.g. Browser_Agent_Service). Scripts can override this individually.</inlineHelpText>
    <label>Named Credential API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>