force-app/main/default/objects/Test_Suite__c/fields/Pass_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pass_Rate__c</fullName>
    <description>Percentage of suite runs where all scripts passed.</description>
    <inlineHelpText>Automatically calculated from related Test Runs.</inlineHelpText>
    <label>Pass Rate (%)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>