force-app/main/default/objects/Test_Suite__c/fields/Target_Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Target_Org_URL__c</fullName>
    <description>Default Salesforce My Domain URL for all scripts in this suite. Individual scripts can override this value.</description>
    <inlineHelpText>The org all scripts in this suite will test against (e.g. https://mycompany--uat.sandbox.my.salesforce.com). Scripts can override this individually.</inlineHelpText>
    <label>Target Org URL</label>
    <type>Url</type>
</CustomField>