force-app/main/default/objects/Test_Suite__c/fields/Total_Scripts__c.field-meta.xml
<CustomField>
    <fullName>Total_Scripts__c</fullName>
    <description>Count of Test Script records associated with this suite.</description>
    <inlineHelpText>Automatically calculated from related Test Scripts.</inlineHelpText>
    <label>Total Scripts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>